# Agar.Io

./: README.md
AGAR.IO/: CMakeLists.txt  main.cpp
AGAR.IO/sources/headerfiles/: chatdesign.h  client.h  connection.h  graphic view.h  loginmenu.h  sample.h
AGAR.IO/sources/sourcesfiles/: chatdesign.cpp  client.cpp  connection.cpp  graphic view.cpp  loginmenu.cpp  sample.cpp
server/: CMakeLists.txt  main.cpp
server/sourc/c++ha/: server.cpp  timemanage.cpp  timer.cpp
server/sourc/head/: server.h  timemanage.h  timer.h
